# pyramid_cpp

./: CMakeLists.txt  README.md
include/: input.hpp  pyramid.hpp  renderer.hpp  shader.hpp
src/: input.cpp  main.cpp  pyramid.cpp  renderer.cpp  shader.cpp
